--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,16 +16,16 @@ website:
         menu:
           - text: Study design
             href: jp/study-design-1.qmd
-          - text: Clinical trial
-            href: jp/clinical-trial-1.qmd
-          - text: Epidemiology
-            href: jp/epidemiology-1.qmd
-          - text: Regression
-            href: jp/logistic-regression-1.qmd
-          - text: Causal inference
-            href: jp/causal-inference-1.qmd
-          - text: Publishing a paper
-            href: jp/publish-a-paper-1.qmd
+#          - text: Clinical trial
+#            href: jp/clinical-trial-1.qmd
+#          - text: Epidemiology
+#            href: jp/epidemiology-1.qmd
+#          - text: Regression
+#            href: jp/logistic-regression-1.qmd
+#          - text: Causal inference
+#            href: jp/causal-inference-1.qmd
+#          - text: Publishing a paper
+#            href: jp/publish-a-paper-1.qmd
 
 format:
   html:
