--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ project:
     
 website:
   title: "Coffee and Research"
+  site-url: "https://gestimation.github.io/coffee-and-research"
   google-analytics: "G-FCK3LX51C6"
   navbar:
     left:
