--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ project:
 website:
   title: "Coffee and Research"
   site-url: "https://gestimation.github.io/coffee-and-research"
+  site-path: "/coffee-and-research/"
+  canonical-url: true
   google-analytics: "G-FCK3LX51C6"
   navbar:
     left:
@@ -24,14 +26,18 @@ website:
             href: en/index.qmd
           - text: Study design
             href: en/study-design-1.qmd
+          - text: Frequentist Thinking
+            href: en/frequentist-1.qmd
       - text: A Conversation (JP)
         menu:
           - text: Index
             href: jp/index.qmd
-          - text: Study design
+          - text: Study Design
             href: jp/study-design-1.qmd
-#          - text: Clinical trial
-#            href: jp/clinical-trial-1.qmd
+          - text: Frequentist Thinking
+            href: jp/frequentist-1.qmd
+          - text: Frequentist Experiments
+            href: jp/frequentist-4.qmd
 #          - text: Epidemiology
 #            href: jp/epidemiology-1.qmd
 #          - text: Regression
