--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ project:
     
 website:
   title: "Coffee and Research"
-  site-url: "https://gestimation.github.io/coffee-and-research"
+  site-url: "https://gestimation.github.io/coffee-and-research/"
   google-analytics: "G-FCK3LX51C6"
   navbar:
     left:
